--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -4,22 +4,35 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: lightgray;
+  background-image: url("/background2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
 
   .inner-container {
-    max-width: 1140px;
+    max-width: 600px;
     width: 30%;
     background-color: #fff;
     border-radius: 10px;
   }
 
   .titel-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
     img {
       width: 100px;
       height: 100px;
+    }
+
+    h1 {
+      margin: 0;
+      color: #3338b6;
+      font-weight: 700;
     }
   }
 
@@ -27,20 +40,20 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 80px 0;
+    padding: 80px;
     gap: 50px;
+    max-width: 600px;
   }
 }
 
 .form-row {
   display: flex;
-  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .form-group {
   margin-bottom: 1rem;
-  padding-right: 5px;
-  padding-left: 5px;
+  width: 100%;
 }
 
 .input-wrapper {
@@ -49,6 +62,7 @@
   padding: 7px 15px;
   background-color: #fff !important;
   transition: all ease-in-out 400ms;
+  max-width: 100%;
 
   label {
     font-size: 13px;
@@ -78,6 +92,7 @@
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
+  box-sizing: border-box;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
@@ -135,4 +150,13 @@
     letter-spacing: 1px;
     transition: all ease-in-out 0.4s;
   }
+}
+
+.invalid-feedback {
+  color: #f44336;
+  font-size: 12px;
+  display: block;
+  max-width: 100%;
+  word-wrap: break-word;
+  white-space: normal;
 }
