--- a/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
+++ b/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.scss
@@ -154,7 +154,7 @@ mat-card {
   border-top: 1px dashed #d9b5ff;
 }
 
-.magent-dashed-class {
+.magenta-dashed-class {
   border-top: 1px dashed #d9b5ff;
 }
 
