--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,17 @@
-<h1>Kanban Board</h1>
+<div class="dashboard">
+  <div class="headline">
+    <h1>Kanban Board</h1>
+    <button (click)="logout()" class="logout btn btn-primary">
+      <mat-icon>logout</mat-icon>
+      <span>Logout</span>
+    </button>
+  </div>
 
-<app-dashboard-drag-and-drop
-  [tasks]="tasks"
-  [loading]="loading"
-  (openDialogAddTask)="openDialogAddTask($event)"
-  (taskDeleted)="onTaskDeleted($event)"
-  (reloadTasks)="reloadTasks()"
-></app-dashboard-drag-and-drop>
+  <app-dashboard-drag-and-drop
+    [tasks]="tasks"
+    [loading]="loading"
+    (openDialogAddTask)="openDialogAddTask($event)"
+    (taskDeleted)="onTaskDeleted($event)"
+    (reloadTasks)="reloadTasks()"
+  ></app-dashboard-drag-and-drop>
+</div>
