--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,65 @@
+.dashboard {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #b5b5b5;
+}
+
 h1 {
   display: flex;
   justify-content: center;
   margin: 30px 0;
   font-weight: 600;
   color: #fff;
+  text-shadow: -1px -1px 0 #3338b6, 1px -1px 0 #3338b6, -1px 1px 0 #3338b6,
+    1px 1px 0 #3338b6;
+}
+
+.headline {
+  position: relative;
+
+  .logout {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: auto;
+    transform: translateY(-50%);
+    padding: 5px 10px;
+
+    &:hover {
+      letter-spacing: 0;
+    }
+  }
+}
+
+.btn {
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  font-size: 1.25rem;
+  width: 100%;
+  color: #fff;
+  padding: 0;
+  width: 100%;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background: #3338b6;
+  border: 0;
+  border-radius: 4px;
+  font-weight: 600;
+  transition: all ease-in-out 0.4s;
+  line-height: 56px;
+  height: 56px;
+
+  &:hover {
+    background-color: #38afff;
+    letter-spacing: 1px;
+  }
 }
