--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,54 +31,234 @@ body {
   }
 }
 
-.mr-16 {
-  margin-right: 16px;
-}
-
-.mt-32 {
-  margin-top: 32px;
-}
-
-.pt-6 {
-  padding-top: 6px;
-}
-
-.padding-16 {
-  padding: 16px;
-}
-
-.full-width {
+.btn {
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  font-size: 1.25rem;
   width: 100%;
+  color: #fff;
+  padding: 0;
+  width: 100%;
+  cursor: pointer;
 }
 
-.point-yellow {
-  background-color: #f9e073;
+.btn-primary {
+  background: #3338b6;
+  border: 0;
+  border-radius: 4px;
+  font-weight: 600;
+  transition: all ease-in-out 0.4s;
+  line-height: 56px;
+  height: 56px;
+
+  &:hover {
+    background-color: #38afff;
+    letter-spacing: 1px;
+  }
 }
 
-.point-green {
-  background-color: #90ee90;
+.register-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-image: url("/background2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .inner-container {
+    max-width: 600px;
+    width: 35%;
+    background-color: #fff;
+    border-radius: 10px;
+  }
+
+  .titel-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    img {
+      width: 100px;
+      height: 100px;
+    }
+
+    h1 {
+      display: flex;
+      margin: 0;
+      color: #3338b6;
+      font-weight: 700;
+    }
+  }
+
+  .login-container {
+    color: #094168 !important;
+    text-decoration: none;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    transition: all ease-in-out 0.4s;
+    width: 100%;
+    display: block;
+
+    &:hover {
+      font-weight: 600;
+      text-decoration: none;
+      letter-spacing: 1px;
+      transition: all ease-in-out 0.4s;
+    }
+  }
+
+  .form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    box-sizing: border-box;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+    &:focus {
+      color: #495057;
+      outline: 0;
+    }
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+
+  .input-wrapper {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 7px 15px;
+    background-color: #fff !important;
+    transition: all ease-in-out 400ms;
+    max-width: 100%;
+
+    label {
+      font-size: 13px;
+      font-weight: 400;
+      opacity: 0.5;
+      margin: 0;
+      letter-spacing: 1px;
+    }
+
+    .form-control {
+      border: 0 !important;
+      padding: 0 !important;
+      box-shadow: none !important;
+      background: transparent !important;
+    }
+  }
+
+  .input-focused {
+    border: 1px solid #04befd !important;
+  }
+
+  .invalid-feedback {
+    color: #f44336;
+    font-size: 12px;
+    display: block;
+    max-width: 100%;
+    word-wrap: break-word;
+    white-space: normal;
+  }
+
+  .alert {
+    color: #f44336;
+    font-size: 12px;
+  }
+
+  .error-container {
+    height: 12px;
+    margin-bottom: 1rem;
+  }
+
+  .col {
+    flex: 0 0 100%;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .point-yellow {
+    background-color: #f9e073;
+  }
+
+  .point-green {
+    background-color: #90ee90;
+  }
+
+  .point-blue {
+    background-color: #add8e6;
+  }
+
+  .point-red {
+    background-color: #ffa9b1;
+  }
+
+  .point-orange {
+    background-color: #fcbf62;
+  }
+
+  .point-purple {
+    background-color: #d9b5ff;
+  }
+
+  .point-magenta {
+    background-color: #ffaeff;
+  }
+
+  .point-cyan {
+    background-color: #7ee7e7;
+  }
 }
 
-.point-blue {
-  background-color: #add8e6;
+.yellow {
+  background-color: #ffffe0;
+  border: 1px solid #f8db5e;
 }
 
-.point-red {
-  background-color: #ffa9b1;
+.blue {
+  background-color: #cce3ff;
+  border: 1px solid #8fc1ff;
 }
 
-.point-orange {
-  background-color: #fcbf62;
+.green {
+  background-color: #dbffc2;
+  border: 1px solid #86e257;
 }
 
-.point-purple {
-  background-color: #d9b5ff;
+.red {
+  background-color: #ffdfe3;
+  border: 1px solid #ffa9b1;
 }
 
-.point-magenta {
-  background-color: #ffaeff;
+.orange {
+  background-color: #ffeac2;
+  border: 1px solid #fcbf62;
 }
 
-.point-cyan {
-  background-color: #7ee7e7;
+.purple {
+  background-color: #f2e6ff;
+  border: 1px solid #d9b5ff;
+}
+
+.magenta {
+  background-color: #ffebff;
+  border: 1px solid #ffaeff;
+}
+
+.cyna {
+  background-color: #e6ffff;
+  border: 1px solid #7ee7e7;
 }
