--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="register-container">
   <div class="inner-container">
+    @if (loading) {
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    }
     <div class="login-user-form">
       <div class="titel-container">
         <img src="kanban.png" alt="kanban-icon" />
@@ -72,7 +75,9 @@
         </div>
         <div class="row">
           <div class="col">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary" [disabled]="loading">
+              Login
+            </button>
           </div>
           <div class="col">
             <br />
