--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,16 @@ body {
     background-color: #38afff;
     letter-spacing: 1px;
   }
+
+  &:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    opacity: 0.6;
+
+    &:disabled:hover {
+      letter-spacing: 0;
+    }
+  }
 }
 
 .register-container {
@@ -76,6 +86,18 @@ body {
     width: 35%;
     background-color: #fff;
     border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+
+    mat-progress-bar {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
   }
 
   .titel-container {
