--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   top: 0;
   bottom: 0;
-  background-color: #b5b5b5;
+  background-color: #cccccc;
 }
 
 h1 {
@@ -12,7 +12,7 @@ h1 {
   justify-content: center;
   margin: 30px 0;
   font-weight: 600;
-  color: #fff;
+  color: #527cff;
   text-shadow: -1px -1px 0 #3338b6, 1px -1px 0 #3338b6, -1px 1px 0 #3338b6,
     1px 1px 0 #3338b6;
 }
