--- a/src/app/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/dialog-add-task/dialog-add-task.component.scss
@@ -103,3 +103,8 @@
 ::ng-deep .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
+
+button:disabled {
+  cursor: not-allowed !important;
+  background-color: transparent;
+}
