--- a/src/app/task-card/task-card.component.scss
+++ b/src/app/task-card/task-card.component.scss
@@ -4,7 +4,7 @@
   gap: 16px;
   padding: 16px;
   border-radius: 3px !important;
-  height: 300px;
+  height: auto;
   width: 350px;
   max-width: 350px;
   position: relative;
@@ -41,6 +41,7 @@
   p {
     margin: 0;
     padding: 0 5px;
+    cursor: pointer;
   }
 
   span {
@@ -48,7 +49,7 @@
   }
 
   .description {
-    font-size: 12px;
+    font-size: 14px;
     color: rgba(0, 0, 0, 0.5);
   }
 
@@ -104,7 +105,7 @@
 
 textarea {
   width: 100%;
-  height: auto;
+  height: 80px;
   max-height: 80px;
   padding: 5px;
   border: none;
@@ -118,10 +119,6 @@ textarea {
   box-shadow: none;
 
   resize: none; /*remove the resize handle on the bottom right*/
-}
-
-.task-edit-input {
-  box-shadow: 0 2px 0 0 green;
 }
 
 .task-detail-edit-container {
@@ -140,6 +137,7 @@ textarea {
     font-weight: 700;
     padding: 5px 10px;
     border-radius: 3px;
+    cursor: pointer;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.05);
@@ -233,6 +231,43 @@ textarea {
   background-color: #e6ffff;
 }
 
+.task-edit-input-yellow {
+  box-shadow: 0 2px 0 0 #f9e073;
+}
+
+.task-edit-input-green {
+  box-shadow: 0 2px 0 0 #86e257;
+}
+
+.task-edit-input-blue {
+  box-shadow: 0 2px 0 0 #8fc1ff;
+}
+
+.task-edit-input-red {
+  box-shadow: 0 2px 0 0 #ffa9b1;
+}
+
+.task-edit-input-orange {
+  box-shadow: 0 2px 0 0 #fcbf62;
+}
+
+.task-edit-input-purple {
+  box-shadow: 0 2px 0 0 #d9b5ff;
+}
+
+.task-edit-input-magenta {
+  box-shadow: 0 2px 0 0 #ffaeff;
+}
+
+.task-edit-input-cyan {
+  box-shadow: 0 2px 0 0 #7ee7e7;
+}
+
 ::ng-deep .mat-mdc-form-field-subscript-wrapper {
   display: none;
+}
+
+button:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
 }
