--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="dashboard">
   <div class="headline">
     <h1>Kanban Board</h1>
+    <div class="welcome-section">
+      <p>Hello, {{ firstName }}! Ready to manage your tasks today?</p>
+    </div>
     <button (click)="logout()" class="logout btn btn-primary">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
@@ -9,6 +12,7 @@
 
   <app-dashboard-drag-and-drop
     [tasks]="tasks"
+    [users]="users"
     [loading]="loading"
     (openDialogAddTask)="openDialogAddTask($event)"
     (taskDeleted)="onTaskDeleted($event)"
