Add multi-select functionality for task members

--- a/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.html
+++ b/src/app/dashboard-drag-and-drop/dashboard-drag-and-drop.component.html
@@ -29,10 +29,10 @@
         </p>
         }
         <div class="member-section">
-          @for (member of task.members; track member) {
+          @for (member of task.members; track member.id) {
           <div class="member-circle" [ngClass]="task.tags">
-            {{ member.first_name.slice(0, 1).toUpperCase()
-            }}{{ member.last_name.slice(0, 1).toUpperCase() }}
+            {{ member.first_name.charAt(0).toUpperCase()
+            }}{{ member.last_name.charAt(0).toUpperCase() }}
           </div>
           }
         </div>
@@ -70,7 +70,7 @@
         </p>
         }
         <div class="member-section">
-          @for (member of task.members; track member) {
+          @for (member of task.members; track member.id) {
           <div class="member-circle" [ngClass]="task.tags">
             {{ member.first_name.slice(0, 1).toUpperCase()
             }}{{ member.last_name.slice(0, 1).toUpperCase() }}
@@ -110,7 +110,7 @@
         </p>
         }
         <div class="member-section">
-          @for (member of task.members; track member) {
+          @for (member of task.members; track member.id) {
           <div class="member-circle" [ngClass]="task.tags">
             {{ member.first_name.slice(0, 1).toUpperCase()
             }}{{ member.last_name.slice(0, 1).toUpperCase() }}
@@ -150,7 +150,7 @@
         </p>
         }
         <div class="member-section">
-          @for (member of task.members; track member) {
+          @for (member of task.members; track member.id) {
           <div class="member-circle" [ngClass]="task.tags">
             {{ member.first_name.slice(0, 1).toUpperCase()
             }}{{ member.last_name.slice(0, 1).toUpperCase() }}
