--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -57,6 +57,23 @@
     </div>
   </div>
 
+  <div class="member-container">
+    <mat-form-field appearance="outline">
+      <mat-select
+        name="member"
+        [(ngModel)]="selectedMembers"
+        (ngModelChange)="onTagChange()"
+        multiple
+      >
+        @for (user of users; track user.id) {
+        <mat-option [value]="user">
+          {{ user.first_name }} {{ user.last_name }}
+        </mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+  </div>
+
   <div class="tag-container">
     <div class="color-box" [ngClass]="task.tags"></div>
     <mat-form-field appearance="outline">
