--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,10 @@
     <div class="welcome-section">
       <p>Hello, {{ firstName }}! Ready to manage your tasks today?</p>
     </div>
+    <button (click)="openDialogContact()">
+      <mat-icon>logout</mat-icon>
+      <span>Add Contact</span>
+    </button>
     <button (click)="logout()" class="logout btn btn-primary">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
