--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,6 +32,7 @@
   <app-dashboard-drag-and-drop
     [tasks]="tasks"
     [users]="users"
+    [contacts]="contacts"
     [loading]="loading"
     (openDialogAddTask)="openDialogAddTask($event)"
     (taskDeleted)="onTaskDeleted($event)"
