--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -67,3 +67,21 @@ h1 {
   margin-left: 20px;
   margin-bottom: 10px;
 }
+
+.member-section {
+  display: flex;
+  gap: 5px;
+
+  .member-circle {
+    width: 20px;
+    height: 20px;
+    background-color: #fff !important;
+    border-radius: 50%;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3477db;
+    border: 1px solid #479749;
+  }
+}
